<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_padding"
            android:layout_marginTop="@dimen/screen_padding"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_padding"
            android:text="Enter OTP"
            android:textColor="@color/myBlack"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="55dp"
                android:text="@string/txt_resent_otp_title"
                android:textColor="@color/myBlack"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="+91 9878987821"
                android:textColor="@color/myBlack"
                android:textSize="12sp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etC1"
                    android:layout_width="@dimen/size_et_otp"
                    android:layout_height="@dimen/hight_et_otp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/et_negative_background"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etC2"
                    android:layout_width="@dimen/size_et_otp"
                    android:layout_height="@dimen/hight_et_otp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/et_negative_background"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etC3"
                    android:layout_width="@dimen/size_et_otp"
                    android:layout_height="@dimen/hight_et_otp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/et_negative_background"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etC4"
                    android:layout_width="@dimen/size_et_otp"
                    android:layout_height="@dimen/hight_et_otp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/et_negative_background"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etC5"
                    android:layout_width="@dimen/size_et_otp"
                    android:layout_height="@dimen/hight_et_otp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/et_negative_background"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etC6"
                    android:layout_width="@dimen/size_et_otp"
                    android:layout_height="@dimen/hight_et_otp"
                    android:background="@drawable/et_negative_background"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layoutResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat3"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat3">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_resend_otp_question"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/myBlack"
                android:textStyle="bold"
                android:paddingStart="5dp"
                android:text="@string/txt_resend_otp"/>


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="phone"
            android:text="0.09"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/layoutResend"
            app:layout_constraintStart_toStartOf="@+id/layoutResend"
            app:layout_constraintTop_toBottomOf="@+id/layoutResend" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendOtp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_padding"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="@dimen/screen_padding"
            android:background="@drawable/btn_negative_background"
            android:ems="10"
            android:paddingTop="@dimen/view_padding"
            android:paddingBottom="@dimen/view_padding"
            android:text="@string/txt_sign_in"
            android:textColor="#8D434545"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCounter" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>